chore: 同步并发进程未提交变更